style.css
/* ... */
#local-user-div {
    display: flex;
    justify-items: space-between;
    border-bottom: 2px solid #141414;
}
#local-username {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1.5rem;
}
#local-close-div {
    height: 1rem;
    width: 100%;
    margin: 0;

    display: flex;
    justify-content: space-between;
    align-items: center;

    padding-left: 10px;
}
#local-close-button {
    height: 20px;
    width: 20px;
    background-color: transparent;
    background-size: cover;
    background-position: center;
    border: none;
    background-image: url("redCross.png");
}
#local-see-all-users-button {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1rem;
    color: white;
    border: none;
    background-color: transparent;

    text-decoration: underline;
    text-decoration-color: #B71C1C;

}

/*All Users*/

#main-all-users-div {
    height: 100vh;
    width: 100%;
    margin: 0;
}
#users-display-div {

    width: 100%;
    height: 95vh;
    margin-top: 5vh;

    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    justify-items: center;
    align-items: start;

}
#small-div {
    height: 5vh;
}
.main-user-div {
    background-color: #2E2E3A;
    max-height: 40vh;
    border-radius: 20px;
    padding: 10px;

    display: flex;
    align-items: center;
}
.main-profile-div {
    height: 7rem;
    width: 7rem;
    background-size: cover;
    border-radius: 50%;

    margin-right: 20px;
}
.main-name-label {
    max-width: 10vw;
}
#go-back-button {
    background-size: cover;
    background-image: url("redCross.png");

    height: 2rem;
    width: 2rem;

    background-color: #141414;
    border: none;

    margin-left: 1rem;
    margin-top: 0.5rem;
}

@media only screen and (max-width: 480px) and (orientation: portrait) { 
    #name-label {
        font-size: 1rem;
    }
    #content-label {
        font-size: 0.5rem !important;
    }
    #time-delete-div {
        flex-direction: column !important;
    }

}

